--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,3 +15,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.bg-little-prince {
+  background-image: url('../public/little-prince.jpg');
+}
