--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,3 +25,41 @@ code {
 .bg-little-prince {
   background-image: url('../public/little-prince.jpg');
 }
+
+.dot-1,
+.dot-2,
+.dot-3 {
+  animation: dot 1s infinite;
+}
+
+.dot-2 {
+  animation-delay: 0.2s;
+}
+
+.dot-3 {
+  animation-delay: 0.4s;
+}
+
+@keyframes dot {
+  0%,
+  60%,
+  100% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+}
+
+.fadesIn {
+  animation: fadeIn 0.5s 1;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
